--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "~6.22",
     "brunch": "^2",
     "clean-css-brunch": "^2",
+    "tachyons": "^4.8.1",
     "uglify-js-brunch": "^2"
   }
 }
